--- a/misc/pinfo/Makefile
+++ b/misc/pinfo/Makefile
@@ -15,17 +15,21 @@ MAINTAINER=	ports@FreeBSD.org
 LIB_DEPENDS=	intl.1:${PORTSDIR}/devel/gettext
 
 GNU_CONFIGURE=	yes
-CONFIGURE_ARGS=	--without-included-gettext --with-readline
-CONFIGURE_ENV=	LIBS="-lgnuregex -L${PREFIX}/lib -lintl" \
-		CFLAGS="${CFLAGS} -I${PREFIX}/include"
+CONFIGURE_ENV=	CPPFLAGS="-I${LOCALBASE}/include" \
+		LIBS="-L${LOCALBASE}/lib -lgnuregex"
+CONFIGURE_ARGS=	--with-readline
 
 MAN1=	pinfo.1
+
+pre-patch:
+	@${PERL} -pi -e \
+		's|DATADIRNAME=lib|DATADIRNAME=share|g' ${WRKSRC}/configure
 
 .include <bsd.port.pre.mk>
 
 .if ${OSVERSION} < 400010
 LIB_DEPENDS+=	ncurses.5:${PORTSDIR}/devel/ncurses
-CONFIGURE_ARGS+=	--with-ncurses=${PREFIX}
+CONFIGURE_ARGS+=	--with-ncurses=${LOCALBASE}
 .endif
 
 .include <bsd.port.post.mk>
