--- a/security/swatch/Makefile
+++ b/security/swatch/Makefile
@@ -8,10 +8,9 @@
 PORTNAME=	swatch
 PORTVERSION=	2.2
 CATEGORIES=	security sysutils
-MASTER_SITES=	ftp://ftp.stanford.edu/general/security-tools/swatch/ \
-		ftp://ftp.cert.dfn.de/pub/tools/audit/swatch/
+MASTER_SITES=	ftp://ftp.stanford.edu/general/security-tools/swatch/OLD/
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	joseph@randomnetworks.com
 
 NO_BUILD=	YES
 
