--- a/devel/valgrind/Makefile
+++ b/devel/valgrind/Makefile
@@ -25,13 +25,13 @@ USE_AUTOTOOLS+=	autoconf:261 aclocal:19 automake:19
 CONFIGURE_TARGET=--build=${MACHINE_ARCH}-portbld-freebsd${OSREL}
 CONFIGURE_ARGS+=--enable-maintainer-mode
 USE_PERL5_BUILD=yes
+USE_GCC=	3.4
 
 .include <bsd.port.pre.mk>
 
 .if ${OSVERSION} >= 800000
 IGNORE=	FreeBSD 8.x is unsupported
 .elif ${OSVERSION} >= 700000
-BROKEN=		does not compile
 PLIST_SUB+=	RELENG_5="@comment "
 PLIST_SUB+=	RELENG_6="@comment "
 PLIST_SUB+=	RELENG_7=""
