--- a/net/p5-Net-SSH/Makefile
+++ b/net/p5-Net-SSH/Makefile
@@ -6,12 +6,12 @@
 #
 
 PORTNAME=	Net-SSH
-PORTVERSION=	0.08
+PORTVERSION=	0.09
 CATEGORIES=	net perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	miwi@FreeBSD.org
 COMMENT=	Perl5 module to access and use ssh protocol
 
 PERL_CONFIGURE=	yes
