--- a/net/cvsup/Makefile
+++ b/net/cvsup/Makefile
@@ -55,7 +55,7 @@ CONFLICTS=	cvsup-[0-9]*
 NO_LATEST_LINK=	yes
 .endif
 .else
-USE_XORG=	x11
+USE_XORG+=	oldx dmx pixman xaw 
 COMMENT+=	(GUI version)
 BUILD_DEPENDS=	${PREFIX}/lib/m3/pkg/formsvbt/${TARGET}/libm3formsvbt.a:${PORTSDIR}/lang/ezm3
 CONFLICTS=	cvsup-without-gui-[0-9]*
