--- a/mail/dkim-milter/Makefile
+++ b/mail/dkim-milter/Makefile
@@ -14,6 +14,7 @@
 
 PORTNAME=	dkim-milter
 PORTVERSION=	2.5.5
+PORTREVISION=	1
 CATEGORIES=	mail
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE}
 MASTER_SITE_SUBDIR=	${PORTNAME}
@@ -26,7 +27,7 @@ USE_OPENSSL=	yes
 
 .if defined(WITH_POSTFIX_MILTER) || defined(WITH_POSTFIX) || defined(WITH_POSTFIX_CURRENT)
 WITH_SENDMAIL_BASE=	yes
-PKGMESSAGE=	pkg-message.postfix
+PKGMESSAGE=	${PKGDIR}/pkg-message.postfix
 
 .if defined(SENDMAIL_MILTER_IN_BASE)
 WITH_SENDMAIL_BASE=yes
